# rust-type-freak

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE.md  README.md  changelog.md
src/: bitset.rs  boolean.rs  common.rs  control.rs  counter.rs  dyn_.rs  fraction.rs  kvlist.rs  lib.rs  maybe.rs  monoid.rs  numeric.rs  polynomial.rs  stepper.rs  tuple.rs
src/dict/: base.rs  macros.rs  mod.rs  operators.rs  ops.rs
src/dim/: base.rs  macros.rs  mod.rs  ops.rs
src/floating/: base.rs  float.rs  marker.rs  mod.rs  ops.rs
src/fraction/: macros.rs  marker.rs  mod.rs  operations.rs  ops.rs  signed.rs  unsigned.rs
src/functional/: applicative.rs  base.rs  fmap.rs  functor.rs  map.rs  mod.rs
src/kvlist/: access.rs  base.rs  insert.rs  macros.rs  marker.rs  misc.rs  mod.rs  operators.rs  remove.rs
src/list/: access.rs  base.rs  convert.rs  functional.rs  indexing.rs  insert.rs  macros.rs  marker.rs  markers.rs  misc.rs  mod.rs  operators.rs  ops.rs  reduction.rs  remove.rs  reverse.rs  zipping.rs
src/tree/: base.rs  mod.rs
