[package]
name = "type-freak"
version = "0.2.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2018"
description = "Collection of typed data structures, trait operators and aliases"
repository = "https://github.com/jerry73204/rust-type-freak"
homepage = "https://github.com/jerry73204/rust-type-freak"
readme = "README.md"
license-file = "LICENSE.md"

[dependencies]
typenum = "~1"
